# mhe_acados_cpp

./: .gitignore  CMakeLists.txt  README.md
solver/: minimal_example_mhe.py
solver/mhe/: acados_ocp.json  export_mhe_solver.py  minimal_example_mhe.py  simU.txt  simX.txt
src/: mhe_pendulum_ode_test.cpp  plot_cpp_results.py
